RESOLVED FIXED282512
[shape-outside] At points where a perpendicular is not defined (e.g. sharp points or line ends) take all points on the circle centered at the point and with a radius of shape-margin
https://bugs.webkit.org/show_bug.cgi?id=282512
Summary [shape-outside] At points where a perpendicular is not defined (e.g. sharp po...
alan
Reported 2024-11-03 10:38:27 PST
ssia
Attachments
Patch (5.98 KB, patch)
2024-11-03 10:40 PST, alan
no flags
Patch (5.98 KB, patch)
2024-11-04 10:42 PST, alan
no flags
[fast-cq]Patch (5.98 KB, patch)
2024-11-04 12:45 PST, alan
no flags
alan
Comment 1 2024-11-03 10:40:16 PST
alan
Comment 2 2024-11-04 10:42:56 PST
alan
Comment 3 2024-11-04 12:45:15 PST
Created attachment 473130 [details] [fast-cq]Patch
EWS
Comment 4 2024-11-04 13:16:23 PST
Committed 286116@main (c2a4c7efd8c2): <https://commits.webkit.org/286116@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473130 [details].
Radar WebKit Bug Importer
Comment 5 2024-11-04 13:17:17 PST
Note You need to log in before you can comment on or make changes to this bug.