[shape-outside] At points where a perpendicular is not defined (e.g. sharp points or line ends) take all points on the circle centered at the point and with a radius of shape-margin https://bugs.webkit.org/show_bug.cgi?id=282512

Reviewed by Antti Koivisto.

FloatRoundedRect::Radii::expandRadii does not inflate non-rounded corners.

* LayoutTests/TestExpectations:
* Source/WebCore/platform/graphics/FloatRoundedRect.cpp:
(WebCore::FloatRoundedRect::Radii::expandEvenIfZero):
* Source/WebCore/platform/graphics/FloatRoundedRect.h:
* Source/WebCore/rendering/shapes/BoxLayoutShape.cpp:
(WebCore::BoxLayoutShape::shapeMarginBounds const):

Canonical link: https://commits.webkit.org/286116@main