Source/WebCore/platform/graphics/FloatRoundedRect.h
@@ -96,6 +96,7 @@ public:
 
         void scale(float factor);
         void scale(float horizontalFactor, float verticalFactor);
+        void expandEvenIfZero(float size);
         void expand(float topWidth, float bottomWidth, float leftWidth, float rightWidth);
         void expand(float size) { expand(size, size, size, size); }
         void shrink(float topWidth, float bottomWidth, float leftWidth, float rightWidth) { expand(-topWidth, -bottomWidth, -leftWidth, -rightWidth); }
